--- a/apps/website/blueprints/dashboard/static/css/sidebar.css
+++ b/apps/website/blueprints/dashboard/static/css/sidebar.css
@@ -102,7 +102,7 @@
   padding: 0;
 }
 
-@media (width < 800px) {
+@media (width < 850px) {
   .sidebar-spacing {
     display: none;
   }
